// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package cat;

import "mojo/core/time.proto";

option go_package = "github.com/liankui/tnr/go/pkg/cat;cat";
option java_multiple_files = true;
option java_outer_classname = "CatProto";
option java_package = "com.liankui.cat";

message Cat {
    string id = 1;
    string name = 2;
    string nick_name = 3;
    string sex = 4;
    mojo.core.Timestamp brith_day = 5;
    string location = 20;
    string area = 21;
    mojo.core.Timestamp last_found_time = 25;
    string status = 50;
    string state = 55;
    mojo.core.Timestamp create_time = 100;
    mojo.core.Timestamp update_time = 101;
    mojo.core.Timestamp delete_time = 102;
}